--- a/config/config.ini.example
+++ b/config/config.ini.example
@@ -56,6 +56,7 @@
 #encrypt-lib:                   # Path to encrypt lib to be used instead of the shipped ones.
 #display-in-console             # Display Found Pokemon in Console.
 #disable-blacklist              # Disable the global anti-scraper IP blacklist.
+#mapname:                       # Name for the map in the HTML view, default RocketMapPlusPlus
 
 
 # Proxy settings
