Dynamic Gym/Raid Icons With ImageMagick
Added Dynamically Generated Gym/Raid Icons With ImageMagick (Make Sure To Check Off, Install Legacy Tools ie: Convert)
[https://www.imagemagick.org/script/download.php#windows]
Added boom.png, exraid.png, Arial Black.ttf For Dynamic Generation.
Added Generic Rocket Map Unknown Raid Boss Icons.
Added Generated Images To Ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ src/
 _build
 _build_html
 beehive.*
+static/images/generated/*.png
 static/images/raid/*.png
 !static/images/raid/*_unknown.png
 static/icons-sprite.png
