[UPDATE] add file for trusted devices to restrict post/fetch only for trusted devices

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ config/*
 !config/config.ini.example
 geofences/*
 !geofences/*.example
+devices/*
+!devices/*.example
 gpx/*
 !gpx/*.example
 static/dist/
