--- a/config/config.ini.example
+++ b/config/config.ini.example
@@ -118,11 +118,12 @@
 # 5. To require a user to be in one of your guilds (servers) to gain access, specify the required guild ID and an invitation link.
 # 6. To require a user to have a specific role in the guild to gain access, specify the required role name(s) and an invitation link.
 # Detailed guide and more information: docs/extra/auth-discord.md
- #user-auth:                     # Force end users to auth to an external service. Supported: Discord
+#user-auth:                     # Force end users to auth to an external service. Supported: Discord
 #user-auth-block-concurrent:    # Block users for a predefined amount of time. Default: 0 (disabled).
 #user-auth-secret-key:          # Secret key to encrypt session cookies. Use a randomly generated string.
 #user-auth-client-id:           # Discord App - OAuth2 Client ID.
 #user-auth-client-secret:       # Discord App - OAuth2 Client Secret.
+#uav-user-auth-validity:        # Check every X seconds if user authentication is still valid and refresh access token. Default: 3600
 #user-auth-guild-required:      # (Optional) If guild ID is specified, user must have joined that guild (server) to access the map.
 #user-auth-guild-invite:        # Invite link to redirect users if they haven't joined the above guild.
 #user-auth-role-required:       # (Optional) If specified, user must have at least one of these Discord roles. Requires a Discord App Bot to be configured with "Manage Roles" permissions.
