Allow timezone adjustment when getting pokestops with quests
Allow timezone adjustment when getting pokestops with quests.
The Pokemon notification option within the map now also applies to raid bosses.

--- a/config/config.ini.example
+++ b/config/config.ini.example
@@ -8,7 +8,7 @@
 # Image settings
 ###################
 
-#generate-images                # Turn on automatic on-demand icon generation useing ImageMagick.
+#generate-images                # Turn on automatic on-demand icon generation using ImageMagick.
 
 # Required settings
 ###################
