Remove repo/discord/maintainer references

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Expected Usage:
 #
 #   # Get the repo
-#   git clone git@github.com:RocketMap/RocketMap.git
+#   git clone git@github.com:GlobalPlusPlus/RocketMapPlusPlus.git
 #
 #   # Go into it
 #   cd RocketMap
