Show s2 cell weather
Show s2 cell weather
Update gym/raid markers with raid boss image as soon that info is available.
Added options to filter gyms so that it only shows what hasn't been updated in the last x hours rather than what has.
A couple of bug fixes for raid timers

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-usemin": "^3.1.1",
     "grunt-zip": "^0.17.1",
     "jit-grunt": "^0.10.0",
-    "jshint-stylish": "^2.2.1"
+    "jshint-stylish": "^2.2.1",
+    "jsts": "^2.0.3"
   },
   "scripts": {
     "build": "grunt build",
